[build-system]
requires = ["setuptools>=65.0.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-financing-platform"
version = "1.0.0"
description = "Synthetic Financing Platform - Comprehensive multi-asset financing optimization system. Box spreads are one strategy component of this platform."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Synthetic Financing Platform Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.24.0",
    # MLX (Apple Silicon Neural Engine acceleration)
    # Note: MLX is optimized for Apple Silicon and uses Neural Engine + Metal GPU
    # Only installs on Apple Silicon macOS (arm64/aarch64), safe no-op elsewhere
    "mlx>=0.20.0",
    "mlx-lm>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "cython>=3.0.0",
    "fastapi>=0.100.0",  # Required for security tests
]

[project.scripts]
synthetic-financing-platform-nautilus = "python.nautilus_strategy:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "build*", "*.egg-info*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
