[workspace]
members = [
  "services/market_data_service",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
name = "backend-market-data"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
market_data = { path = "../backend/crates/market_data" }
prost = "0.12"
tonic = { version = "0.11", features = ["transport"] }
tonic-health = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
