[workspace]
members = [
  "crates/market_data",
  "crates/strategy",
  "crates/risk",
  "crates/api",
  "crates/ledger",
  "crates/nats_adapter",
  "services/backend_service", "crates/discount_bank_parser",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tower = "0.4"
pyo3 = { version = "0.21", features = ["auto-initialize"] }
rand = { version = "0.8", features = ["std"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
toml = "0.8"
thiserror = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
