[workspace]
members = [
  "crates/market_data",
  "crates/strategy",
  "crates/risk",
  "crates/api",
  "crates/ledger",
  "crates/nats_adapter",
  "crates/quant",
  "crates/ib_adapter",
  "services/backend_service",
  "services/tui_service",
  "crates/discount_bank_parser",
  "bin/cli",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tower = "0.4"
rand = { version = "0.8", features = ["std"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
toml = "0.8"
thiserror = "1"
reqwest = { version = "0.13", default-features = false, features = ["cookies", "json", "rustls", "query"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
openssl = "0.10"
ibapi = "2.10"
# cxx = "1.0" # Available for C++ ↔ Rust interop exploration (see task T-1773475473747582000)
